# humor-eval

./: LICENSE  README.md  analyze_results.py  compare_results.py  evaluations.ipynb  pyproject.toml  requirements.txt  results.json  results20250823.json  run_simple_job.sbatch
logs/: humor-simple_385902.err  humor-simple_385902.out  humor-simple_385903.err  humor-simple_385903.out  humor-simple_385904.err  humor-simple_385904.out
results_simple_2048/: results_simple_only_test_20250920_230332.json  results_simple_only_test_hard_20250920_230336.json  results_simple_only_test_very_hard_20250920_230332.json
src/humor_eval/: cli.py  data.py  dataset_types.py  models.py  run_dual.py  run_simple.py  test.py
tests/: test_parsing.py
