[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "humor-eval"
version = "0.1.0"
description = "Evaluation helpers for humor datasets and GLM-4.xV"
authors = [{ name = "eozlu21" }]
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
humor-eval = "humor_eval.cli:main"
